bk_ida/gccida/c3/decode_addr_const
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/decode_addr_const/src/varasm.c:2768:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/decode_addr_const/src/varasm.c:2772:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/decode_addr_const/src/varasm.c:2798:22: error: expected expression
v10 = *( tree_node **)( low + 40); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/decode_addr_const/src/varasm.c:2798:10: error: use of undeclared identifier 'tree_node'
v10 = *( tree_node **)( low + 40); 
         ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/decode_addr_const/src/obj/varasm.o] Error 1
